packagelon com.twittelonr.reloncos.uselonr_videlono_graph

import com.twittelonr.finaglelon.thrift.ClielonntId
import com.twittelonr.finaglelon.tracing.Tracelon
import com.twittelonr.finaglelon.tracing.TracelonId
import com.twittelonr.reloncos.deloncidelonr.elonndpointLoadShelonddelonr
import com.twittelonr.reloncos.uselonr_videlono_graph.thriftscala._
import com.twittelonr.util.Duration
import com.twittelonr.util.Futurelon
import com.twittelonr.util.Timelonr
import scala.concurrelonnt.duration.MILLISelonCONDS
import com.twittelonr.logging.Loggelonr
import com.twittelonr.reloncos.uselonr_twelonelont_graph.relonlatelondTwelonelontHandlelonrs.ConsumelonrsBaselondRelonlatelondTwelonelontsHandlelonr
import com.twittelonr.reloncos.uselonr_videlono_graph.relonlatelondTwelonelontHandlelonrs.ProducelonrBaselondRelonlatelondTwelonelontsHandlelonr
import com.twittelonr.reloncos.uselonr_videlono_graph.relonlatelondTwelonelontHandlelonrs.TwelonelontBaselondRelonlatelondTwelonelontsHandlelonr

objelonct UselonrVidelonoGraph {
  delonf tracelonId: TracelonId = Tracelon.id
  delonf clielonntId: Option[ClielonntId] = ClielonntId.currelonnt
}

class UselonrVidelonoGraph(
  twelonelontBaselondRelonlatelondTwelonelontsHandlelonr: TwelonelontBaselondRelonlatelondTwelonelontsHandlelonr,
  producelonrBaselondRelonlatelondTwelonelontsHandlelonr: ProducelonrBaselondRelonlatelondTwelonelontsHandlelonr,
  consumelonrsBaselondRelonlatelondTwelonelontsHandlelonr: ConsumelonrsBaselondRelonlatelondTwelonelontsHandlelonr,
  elonndpointLoadShelonddelonr: elonndpointLoadShelonddelonr
)(
  implicit timelonr: Timelonr)
    elonxtelonnds thriftscala.UselonrVidelonoGraph.MelonthodPelonrelonndpoint {

  privatelon val delonfaultTimelonout: Duration = Duration(50, MILLISelonCONDS)
  privatelon val elonmptyRelonsponselon = Futurelon.valuelon(RelonlatelondTwelonelontRelonsponselon())
  privatelon val log = Loggelonr()

  ovelonrridelon delonf twelonelontBaselondRelonlatelondTwelonelonts(
    relonquelonst: TwelonelontBaselondRelonlatelondTwelonelontRelonquelonst
  ): Futurelon[RelonlatelondTwelonelontRelonsponselon] =
    elonndpointLoadShelonddelonr("videlonoGraphTwelonelontBaselondRelonlatelondTwelonelonts") {
      twelonelontBaselondRelonlatelondTwelonelontsHandlelonr(relonquelonst).raiselonWithin(delonfaultTimelonout)
    }.relonscuelon {
      caselon elonndpointLoadShelonddelonr.LoadShelonddingelonxcelonption =>
        elonmptyRelonsponselon
      caselon elon =>
        log.info("uselonr-videlono-graph_twelonelontBaselondRelonlatelondTwelonelonts" + elon)
        elonmptyRelonsponselon
    }

  ovelonrridelon delonf producelonrBaselondRelonlatelondTwelonelonts(
    relonquelonst: ProducelonrBaselondRelonlatelondTwelonelontRelonquelonst
  ): Futurelon[RelonlatelondTwelonelontRelonsponselon] =
    elonndpointLoadShelonddelonr("producelonrBaselondRelonlatelondTwelonelonts") {
      producelonrBaselondRelonlatelondTwelonelontsHandlelonr(relonquelonst).raiselonWithin(delonfaultTimelonout)
    }.relonscuelon {
      caselon elonndpointLoadShelonddelonr.LoadShelonddingelonxcelonption =>
        elonmptyRelonsponselon
      caselon elon =>
        log.info("uselonr-videlono-graph_producelonrBaselondRelonlatelondTwelonelonts" + elon)
        elonmptyRelonsponselon
    }

  ovelonrridelon delonf consumelonrsBaselondRelonlatelondTwelonelonts(
    relonquelonst: ConsumelonrsBaselondRelonlatelondTwelonelontRelonquelonst
  ): Futurelon[RelonlatelondTwelonelontRelonsponselon] =
    elonndpointLoadShelonddelonr("consumelonrsBaselondRelonlatelondTwelonelonts") {
      consumelonrsBaselondRelonlatelondTwelonelontsHandlelonr(relonquelonst).raiselonWithin(delonfaultTimelonout)
    }.relonscuelon {
      caselon elonndpointLoadShelonddelonr.LoadShelonddingelonxcelonption =>
        elonmptyRelonsponselon
      caselon elon =>
        log.info("uselonr-videlono-graph_consumelonrsBaselondRelonlatelondTwelonelonts" + elon)
        elonmptyRelonsponselon
    }
}
